<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>holonomic_bot_controller</name>
  <version>0.0.0</version>
  <description>A base controller for a holonomic bot</description>
  <maintainer email="darren.poulson@gmail.com">Darren Poulson</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
